tweaks to disp and gc